# SwitchBotClient

./: README.md  package-lock.json  package.json
.github/workflows/: build.yaml
src/: ActionButton.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  param.rs  switchbot.rs
src-tauri/src/switchbot/: device.rs  scene.rs  utils.rs
src/componets/: ActionButton.tsx  ExecuteSceneButton.tsx  InfraredAirConditionerCard.tsx  InfraredLightCard.tsx  MessageDialog.tsx
src/componets/tabs/: InfraredDeviceTab.tsx  SceneTab.tsx  SettingTab.tsx
src/data/: InfraredAirConditioner.tsx  InfraredRemote.tsx  Scene.tsx
