[package]
name = "SwitchBotClient"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = { version = "0.5", features = ["yaml_conf"], default-features = false }
uuid = "1.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
base64 = "0.21.2"
sha2 = "0.10.7"
hmac = "0.12.1"
chrono = "0.4.26"
ring = "0.16.20"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
